force-app/main/default/objects/RetailerServiceCertification__c/RetailerServiceCertification__c.object-meta.xml
<CustomObject>
    <description>Retailer Service Certification relates Certifications to a Retailer, which determines the Services that are available when building a Project Service. Retailer Service Certification is related to Retailer, Service, and Certification.</description>
    <label>Retailer Service Certification</label>
    <nameField>
        <displayFormat>RSC-{000000000}</displayFormat>
        <label>Retailer Service Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Service Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>