force-app/main/default/objects/RetailerServiceCertification__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Retailer Service Certifications</relationshipLabel>
    <relationshipName>Retailer_Service_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>