force-app/main/default/objects/RetailerServiceCertification__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Retailer</label>
    <referenceTo>Retailer__c</referenceTo>
    <relationshipLabel>Retailer Service Certifications</relationshipLabel>
    <relationshipName>Retailer_Service_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>