force-app/main/default/objects/RetailerServiceCertification__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Retailer Service Certifications</relationshipLabel>
    <relationshipName>Retailer_Service_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>